--- a/requirements.txt
+++ b/requirements.txt
@@ -1,9 +1,15 @@
 connexion >= 2.6.0
-connexion[swagger-ui] == 2.14.0
+# connexion[swagger-ui] == 2.14.0
 python_dateutil == 2.8.2
-setuptools >= 66.1.1
+# setuptools >= 66.1.1
+setuptools==69.0.3
+connexion[swagger-ui]==2.14.2
+setuppy-generator==2020.12.2
 swagger-ui-bundle >= 0.0.2
 
-Flask~=2.2.2
-six~=1.16.0
-tinydb>=4.7.1
+Flask==2.2.5
+six==1.16.0
+tinydb==4.8.0
+# Flask~=2.2.2
+# six~=1.16.0
+# tinydb>=4.7.1
